# WarmindRasputin

./: .env.example  .gitignore  CLAUDE.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.web.json  vite.config.ts
.claude/agents/: shader-smith.md  voice-tuner.md
.claude/skills/orb-visual/: SKILL.md
.claude/skills/rasputin-voice/: SKILL.md
.claude/skills/warmind-protocol/: SKILL.md
__tests__/: analyze.test.ts  arcs.test.ts  driver.test.ts  effects.test.ts  eq-curve.test.ts  install-hook.test.ts  observer.test.ts  persona.test.ts  phrases.test.ts  pronounce.test.ts  protocol.test.ts  sessions.test.ts  subtitle.test.ts  tailer.test.ts  timeline.test.ts  transcript.test.ts  translate.test.ts  type-into.test.ts
assets/: eq-curve.json  speech-map.json
docs/: BUILD.md  GUIDE.md  RELEASE.md
scripts/: build-sfx.mjs  bundle-daemon.mjs  release.sh  setup.sh  with-rust.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/server/: daemon.ts
src/server/audio/: analyze.ts  arcs.ts  effects.ts  extract-ambience.ts  horn.ts  pitch.ts  timeline.ts
src/server/claude/: driver.ts  install-hook.ts  observer.ts  persona.ts  sessions.ts  tailer.ts  transcript.ts
src/server/input/: type-into.ts
src/server/voice/: analyze-ref.ts  audition.ts  chains.ts  check-pitch.ts  eq-curve.ts  (+7 more)
src/shared/: protocol.ts
src/web/: index.html  main.ts  overlay.ts  preferences.html  preferences.ts
tools/: shoot.ts
(+6 files in other folders)
