[package]
name = "rasputin-overlay"
version = "0.2.0"
description = "Warmind overlay shell for RasputinClaudeAI"
edition = "2021"
rust-version = "1.77"

# The Rust side is deliberately thin. Everything with behaviour lives in the Node daemon and the
# web renderer; this crate exists to give them a transparent, always-on-top, click-through window
# and a global hotkey — the four things a browser cannot do.

[lib]
name = "rasputin_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
